Revert "fix(docs): Update Unescaped Entities, Typos, Code Examples in Docs (#4149)" (#4161)
This reverts commit 991742040e734c9f748a80d119e485545c258ee7.

--- a/packages/design-system/ui/components/activity-timeline/docs.mdx
+++ b/packages/design-system/ui/components/activity-timeline/docs.mdx
@@ -26,7 +26,7 @@ Text describing the type of timeline item is placed in a <code>span</code>. It i
 
 - <code>aria-controls</code> is used to create an association between the button and the details section. If the details section has an <code>id="email-content"</code>, then the button should have <code>aria-controls="email-content"</code>.
 - The title of the timeline item can also be used as a button to open the details section. If the details section has an <code>id="email-content"</code>, then the div with <code>slds-timeline\_\_trigger</code> should have <code>aria-controls="email-content"</code> and the click handler.
-- <code>aria-expanded</code> indicates if the details section is open or closed and is read aloud by assistive technology when the button is focused.
+- <code>aria-expanded</code> indicates if the details section is open or closed and is read aloud by assitive technology when the button is focused.
 
 **Section:**
 
