--- a/packages/design-system/ui/components/breadcrumbs/docs.mdx
+++ b/packages/design-system/ui/components/breadcrumbs/docs.mdx
@@ -12,11 +12,11 @@ import * as Breadcrumbs from './base/example';
 
 ## About Breadcrumbs
 
-Breadcrumbs are typically constructed with an `ol` because their order matters. You mark up breadcrumbs with classes from the horizontal list utility. When you add the `.slds-breadcrumb` class, the separators are automatically generated.
+Breadcrumbs are typically constructed with an <code>ol</code> because their order matters. You mark up breadcrumbs with classes from the horizontal list utility. When you add the <code>.slds-breadcrumb</code> class, the separators are automatically generated.
 
 ### Accessibility
 
-Place the breadcrumb in a `<nav>` element with `role="navigation"`. The `<nav>` element is also marked-up with `aria-label="Breadcrumbs"` to describe the type of navigation.
+Place the breadcrumb in a <code>nav</code> element with <code>role="navigation"</code>. The <code>nav</code> element is also marked-up with <code>aria-label="Breadcrumbs"</code> to describe the type of navigation.
 
 ## Base
 
@@ -26,7 +26,7 @@ Place the breadcrumb in a `<nav>` element with `role="navigation"`. The `<nav>` 
 
 ### With Overflow
 
-The overflow menu breadcrumbs variant is a composition of the overflow menu with actions example of the menus component and breadcrumbs component. To implement this, include the overflow menu as the first `<li>` in the breadcrumb component. In order to vertically align all of the breadcrumb items to the center, add the `.slds-grid_vertical-align-center` class to the `<ol>`.
+The overflow menu breadcrumbs variant is a composition of the overflow menu with actions example of the menus component and breadcrumbs component. To implement this, include the overflow menu as the first <code>&lt;li&gt;</code> in the breadcrumb component. In order to vertically align all of the breadcrumb items to the center, add the <code>.slds-grid_vertical-align-center</code> class to the <code>&lt;ol&gt;</code>.
 
 <CodeView style={{ height: '150px' }}>
   {getDisplayElementById(Breadcrumbs.states, 'overflow-breadcrumbs')}
