--- a/packages/design-system/ui/components/button-icons/docs.mdx
+++ b/packages/design-system/ui/components/button-icons/docs.mdx
@@ -146,7 +146,7 @@ You can disable a stateful button icon by applying the `disabled` attribute to t
 
 ### Bare Icon
 
-The bare variant can be displayed in three other sizes—`large`, `small`, `x-small`—by adding a sizing class on the `<svg>` icon itself.
+The bare variant can be displayed in three other sizes—`large`, `small`, `x-small`—by adding a sizing class on the `&lt;svg&gt;` icon itself.
 
 <CodeBlock toggleCode={false}>
   <button>
