--- a/packages/design-system/ui/components/datetime-picker/docs.mdx
+++ b/packages/design-system/ui/components/datetime-picker/docs.mdx
@@ -26,7 +26,7 @@ The datetime picker has the following markup requirements:
 **Desktop**
 - Add `.slds-is-open` to the element with `.slds-dropdown-trigger` to invoke the dropdown that contains the datepicker and the list of time options.
 - On the timepicker, the `.slds-has-focus` modifier class is required on the `.slds-listbox__option` element that has focus.
-- On the timepicker, the `.slds-is-selected` modifier class is required on the `.slds-listbox__option` element that has been selected.
+- On the timpicker, the `.slds-is-selected` modifier class is required on the `.slds-listbox__option` element that has been selected.
 - On the datepicker, the `.slds-is-selected` modifier class is required on the `td` element that has the selected day.
 - On the datepicker, the `.slds-is-today` modifier class is required on the `td` element that is the current day.
 
