--- a/packages/design-system/ui/components/drop-zone/docs.mdx
+++ b/packages/design-system/ui/components/drop-zone/docs.mdx
@@ -55,7 +55,7 @@ When dragging a component, use the drag over drop zone to indicate to the user w
 
 ### Insertion Point
 
-An insertion point is used to further communicate to the user the exact slot the component is being placed.
+An insertion point is used to futher communicate to the user the exact slot the component is being placed.
 
 <CodeView toggleCode={false}>
   <DropZoneInsertionPoint/>
