--- a/packages/design-system/ui/components/form-element/docs.mdx
+++ b/packages/design-system/ui/components/form-element/docs.mdx
@@ -39,11 +39,11 @@ import { getDisplayElementById } from '../../shared/helpers';
 
 ## About Form Elements
 
-The Form Element is initialized with `slds-form-element` and is made up of three primary pieces; a label (`slds-form-element__label`), a form control container (`slds-form-element__control`), and a form input element, i.e. `<input>`.
+The Form Element is initialized with `slds-form-element` and is made up of three primary pieces; a label (`slds-form-element__label`), a form control container (`slds-form-element__control`), and a form input element, i.e. `lt;input&gt;`.
 
 ### Form Label
 
-A form label should use either the `<label>` or `<legend>` elements with the class `slds-form-element__label`. Use `<legend>` when you have a [compound form](/components/form-element/#Compound).
+A form label should use either the `&lt;label&gt;` or `&lt;legend&gt;` elements with the class `slds-form-element__label`. Use `&lt;legend&gt;` when you have a [compound form](/components/form-element/#Compound).
 
 <CodeBlock toggleCode={false}>
   <label className="slds-form-element__label" htmlFor="unique-id-of-input">
@@ -65,7 +65,7 @@ There are many types of input elements that can be used in the Form Element, inc
 
 ### Accessibility
 
-Labels must have the `for` attribute applied, and its value must match the ID of the associated form element, like `<input id="unique-id-of-input" />`. This association ensures that assistive technology informs users about what information to enter where.
+Labels must have the <code>for</code> attribute applied, and its value must match the ID of the associated form element, like <code><input id="unique-id-of-input" /></code>. This association ensures that assistive technology informs users about what information to enter where.
 
 ## Base
 
@@ -81,9 +81,9 @@ Labels must have the `for` attribute applied, and its value must match the ID of
 
 ### View Mode/Static
 
-If a form element requires a view mode or static state, instead of `slds-form-element__label` being a `<label>` element, we want to change the element to a `<span>`. This is because the form is no longer a form but a statically read name and value pair.
+If a form element requires a view mode or static state, instead of `slds-form-element__label` being a `&lt;label&gt;` element, we want to change the element to a `&lt;span&gt;`. This is because the form is no longer a form but a statically read name and value pair.
 
-The string inside of `slds-form-element__control` needs to be wrapped in a `<div>` as well, with the class `slds-form-element__static` applied to it.
+The string inside of `slds-form-element__control` needs to be wrapped in a `&lt;div&gt;` as well, with the class `slds-form-element__static` applied to it.
 
 In addition to the structural changes — if the form element is standalone, you can _optionally_ apply `slds-form-element__readonly`. The class will help spacing and separation between other form elements. This class is **_required_** if the form element is in the context of a larger form composition.
 
@@ -123,7 +123,7 @@ A form element can have help text that will display in a tooltip when hovering o
 
 The icon comes in the form of a button icon so it can receive focus when a user tabs through a form with multiple form elements.
 
-The button icon is **_required_** to be wrapped in a `<div>` with the class `slds-form-element__icon` and should be placed outside of the `<label>` element.
+The button icon is **_required_** to be wrapped in a `&lt;div&gt;` with the class `slds-form-element__icon` and should be placed outside of the `&lt;label&gt;` element.
 
 <Example title="Form Element - Help Text Icon">
 
@@ -163,9 +163,9 @@ A form element can have various methods of feedback, such as a required denotati
 
 #### Required
 
-When a form element is required, an `<abbr>` should be injected before the `<input>` and within the `<label>` and have the class `slds-required`.
+When a form element is required, an `lt;abbr&gt;` should be injected before the `lt;input&gt;` and within the `lt;label&gt;` and have the class `slds-required`.
 
-The `<input>` element should also have the HTML attribute `required` or `required=""`. Similarly, if it is disabled, it should have the `disabled` or `disabled=""` attribute. Do not use true/false values inside the required or disabled because the mere presence of these attributes signifies the field is required or disabled.
+The `lt;input&gt;` element should also have the HTML attribute required or required="". Similarly, if it is disabled, it should have the disabled or disabled="" attribute. Do not use true/false values inside the required or disabled because the mere presence of these attributes signifies the field is required or disabled.
 
 <Example title="Form Element - Required">
 
@@ -179,15 +179,16 @@ The `<input>` element should also have the HTML attribute `required` or `require
 
 #### Error
 
-If an error has occurred while submitting a form, the form element with an error should provide feedback. The `slds-has-error` class is placed on the `<div class="slds-form-element">` element. Then, the error message for the user is placed in a `<div>` with the `slds-form-element__help` class.
+If an error has occurred while submitting a form, the form element with an error should provide feedback. The `slds-has-error` class is placed on the `lt;div class="slds-form-element"&gt;` element. Then, the error message for the user is placed in a `lt;div&gt;` with the `slds-form-element__help` class.
 
 <Blockquote type="a11y" header="Accessibility requirement">
   When a form element displays feedback notifying the user of an error, the
   error string should be linked to the element by adding the{' '}
-  <code>aria-describedby</code> attribute to the <code>&lt;input&gt;</code>. The
-  `aria-describedby` attribute must reference the id of the error message. This
-  configuration allows screen readers to read the associated error message when
-  the invalid field is focused.
+  <code>aria-describedby</code> attribute to the{' '}
+  <code>&lt;input&gt;</code>. The `aria-describedby` attribute
+  must reference the id of the error message. This configuration allows screen
+  readers to read the associated error message when the invalid field is
+  focused.
 </Blockquote>
 
 <Example title="Form Element - Error">
@@ -218,7 +219,7 @@ If your form has more than one form element, you can switch the direction of `sl
 
 ### Stacked
 
-To vertically stack `<label>` and `<input>` pairs, place `slds-form-element_stacked` on the `<div>` with the class of `slds-form-element` for optimal spacing.
+To vertically stack `lt;label&gt;` and `lt;input&gt;` pairs, place `slds-form-element_stacked` on the `div` with the class of `slds-form-element` for optimal spacing.
 
 <Example title="Form Layout - Stacked">
   <CodeView>
@@ -228,7 +229,7 @@ To vertically stack `<label>` and `<input>` pairs, place `slds-form-element_stac
 
 ### Horizontal
 
-To horizontally align a `<label>` and `<input>`, use the `slds-form-element_horizontal` class on the `<div>` with the class of `slds-form-element`. The `slds-form-element__label` takes up 33% of the width, and the `slds-form-element__control` uses the remaining 66%.
+To horizontally align a `lt;label&gt;` and `lt;input&gt;`, use the `slds-form-element_horizontal` class on the `div` with the class of `slds-form-element`. The `slds-form-element__label` takes up 33% of the width, and the `slds-form-element__control` uses the remaining 66%.
 
 <Example title="Form Layout - Horizontal">
   <CodeView>
@@ -315,11 +316,11 @@ When using `slds-form-element_horizontal`, you might find that the 33/66% distri
 
 ### Compound
 
-A compound form is a grouping of several form elements described by a label/title. The compound form should be implemented as a `<fieldset>`, where the label/title is implemented as a `<legend>` element.
+A compound form is a grouping of several form elements described by a label/title. The compound form should be implemented as a `lt;fieldset&gt;`, where the label/title is implemented as a `lt;legend&gt;` element.
 
-The `<fieldset>` **_requires_** the class `slds-form-element_compound`. This class handles the layout and wrapping of the form elements that are grouped together.
+The `lt;fieldset&gt;` **_requires_** the class `slds-form-element_compound`. This class handles the layout and wrapping of the form elements that are grouped together.
 
-The `<legend>` element **_requires_** the class `slds-form-element__legend`. Legend elements can only accept a limited amount of CSS properties so this class is there to help manage its layout.
+The `lt;legend&gt;` element **_requires_** the class `slds-form-element__legend`. Legend elements can only accept a limited amount of CSS properties so this class is there to help manage its layout.
 
 <CodeBlock toggleCode={false}>
   <Fieldset hasCompoundFields label="Fieldset Label">
@@ -329,7 +330,7 @@ The `<legend>` element **_requires_** the class `slds-form-element__legend`. Leg
 
 #### Rows
 
-Each row of a compound field should be wrapped in a `<div>` with the class `slds-form-element__row`.
+Each row of a compound field should be wrapped in a `lt;div&gt;` with the class `slds-form-element__row`.
 
 #### Fields
 
@@ -357,13 +358,14 @@ Though an address form is utilizing the `slds-form-element_compound` class, we n
 
 ### Record Form
 
-A record form is a series of rows created by `slds-form__row`. Inside of each row contains up to 2 inline-editable form element. Each item inside of `slds-form__row` is required to be wrapped in a `<div>` with the class `slds-form__item`.
+A record form is a series of rows created by `slds-form__row`. Inside of each row contains up to 2 inline-editable form element. Each item inside of `slds-form__row` is required to be wrapped in a `lt;div&gt;` with the class `slds-form__item`.
 
 <Blockquote type="a11y" header="Accessibility Requirement">
   Due to the nature of how the record form is composed, we need to notify screen
-  readers that this is a list by adding <code>role="list"</code> to the{' '}
-  <code>slds-form</code> element. Every column inside of each row should get{' '}
-  <code>role="listitem"</code> to identify itself as items of the list.
+  readers that this is a list by adding <code>role="list"</code>{' '}
+  to the <code>slds-form</code> element. Every column inside of
+  each row should get <code>role="listitem"</code> to identify
+  itself as items of the list.
 </Blockquote>
 
 #### View Mode
