--- a/packages/design-system/ui/components/input/docs.mdx
+++ b/packages/design-system/ui/components/input/docs.mdx
@@ -78,7 +78,7 @@ In some cases, the read-only field state is swapped and has no `<input>`. This i
 #### Icon on the left
 
 <Blockquote type="warning">
-  A left aligned icon cannot be paired with fixed text.
+  A left aligned icon cannot be paired wtih fixed text.
 </Blockquote>
 
 <CodeView>
