--- a/packages/design-system/ui/components/panels/docs.mdx
+++ b/packages/design-system/ui/components/panels/docs.mdx
@@ -77,7 +77,7 @@ The header of a left/right docked panel has left-aligned text by default and one
 
 ### Centered Text
 
-To center the header title, add the class `slds-panel__header_align-center` to the `<div>` with class `slds-panel__header`.
+To center the header title, add the class `slds-panel__header_align-center` to the `&lt;div&gt;` with class `slds-panel__header`.
 
 <Example title="Panel base - header">
   <CodeView
@@ -106,7 +106,7 @@ If a panel header requires additional elements outside of a title and close butt
   <div className="slds-panel__header slds-panel__header_custom">...</div>
 </CodeBlock>
 
-The `<h2></h2>` which contains the title of the panel requires the class `slds-panel__header-title`.
+The `&lt;h2&gt;` which contains the title of the panel requires the class `slds-panel__header-title`.
 
 ## Invoked via Toggle
 
@@ -221,7 +221,7 @@ The panels come in 5 different sizes:
 
 ### Open as a drawer
 
-A panel causes reflow by being in the flow of the layout rather than overlaid on top of the content. To achieve this, simply toggle the class `slds-is-open` to the `slds-panel_docked` element.
+A panel causes reflow by being in the flow of the layout rather than overlayed on top of the content. To achieve this, simply toggle the class `slds-is-open` to the `slds-panel_docked` element.
 
 <Example title="Panel base - Drawer">
   <PanelPlayground drawer />
