--- a/packages/design-system/ui/components/progress-ring/docs.mdx
+++ b/packages/design-system/ui/components/progress-ring/docs.mdx
@@ -26,8 +26,7 @@ The 'completeness' of the Progress Ring is indicated by the circular shape (pie 
 
 The path declaration looks complex, but is actually pretty straightforward, with just a few parts that need customization.
 
-The breakdown of the progress ring's `d` attribute can be broken down like so:
-
+The breakdown of the progress ring's `d` attribute can be broken down like so:\
 `d="M 1 0 A 1 1 0 {isLong} 1 {arcX} {arcY} L 0 0"`
 
 - isLong: a binary flag if the arc should 'take the long path' (used for > 50% fill)
