--- a/packages/design-system/ui/components/carousel/docs.mdx
+++ b/packages/design-system/ui/components/carousel/docs.mdx
@@ -98,7 +98,7 @@ You are able to navigate between panels but interacting with the `slds-carousel_
   A panel becomes visible by toggling the <code>aria-hidden</code> attribute from <code>false</code> to <code>true</code> on the <code>slds-carousel__panel</code> element. When a panel becomes active, the `tabindex` of the other non-visible panels should be set to -1 while the active panel remains at 0.
 </Blockquote>
 
-When a panel becomes active, apply an inline style to `slds-carousel__panel` to move the panels left to right. We do this by updating the location of the panel on its Y axis using transforms. The first panel should be `transform: translateX(0%)` but when any preceding panel becomes active it can be subtracted by 100%, moving 100% of each panel to the left. For example, panel 1 would be visible at `transform: translateX(0%)`, while panel 3 would be visible at `transform: translateX(-200%)`.
+When a panel becomes active, apply an inline style to `slds-carousel__panel` to move the panels left to right. We do this by updating the location of the panel on its Y axis using transforms. The first panel should be `transform: translateX(0%)` but when any precedding panel becomes active it can be subtracted by 100%, moving 100% of each panel to the left. For example, panel 1 would be visible at `transform: translateX(0%)`, while panel 3 would be visible at `transform: translateX(-200%)`.
 
 When making the `slds-carousel__panel` active, the indicator should be updated with the `slds-is-active` class. This provides visual feedback showing which carousel panel is active.
 
